# ndk-cmake-vs

./: .gitignore  AndroidManifest.xml  CMakeLists.txt  README.md  android.toolchain.cmake  stub.cpp
jni/: Android.mk  Application.mk  CMakeLists.txt  hello-jni.cpp
src/com/example/hellojni/: HelloJni.java
